# File-Synchronizer-Python

./: .gitignore  AngryFace.elm  MultiplePages.elm  README.md  elm-package.json  filesynchronizer.py  server.cabal  tracker.py
New folder/: HappyFace.elm  HopefulFace.elm  SadFace.elm  SvgCalendar.elm  VibrantFace.elm
Server/: ResilientServer.hs
src/: Activity.elm  ActivityGraph.elm  Activity_.elm  AngryFace.html  AvatarAssets.elm  AvatarCreator.elm  CircleOfSix.elm  CircleOfSixOnCalendar.elm  DepressedFace.elm  Dropdown.elm  FrustratedFace.elm  Graph.elm  GraphicSVG.elm  Graphing.elm  GraphingTest.elm  HappyFace.elm  Icons.elm  Journal.elm  Main.elm  Makefile  MultiplePages.elm  MultiplePages_.elm  README.md  Resilience App Overview.docx  SVGGraphing.elm  Settings.elm  SvgCalendar.elm  Tetris.elm  TetrisGame.elm  elm-package.json  test.html
src/css/: calendar.css  journal.css
